<resources>
    <string name="app_name">Hang tight</string>

    <!-- Navigation -->
    <string name="title_stats">Stats</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>

    <!-- Workout -->
    <string name="hang">Hang</string>
    <string name="rest">Rest</string>
    <string name="long_rest">Long Rest</string>
    <string name="exercises">Exercises</string>
    <string name="reps">Reps</string>
    <string name="hangboard">Hangboard:</string>
    <string name="no_hangboard">No Board Selected</string>

    <!-- Dialog -->
    <string name="exit">Exit</string>
    <string name="done">Done</string>
    <string name="new_exercise">New Exercise</string>

    <!-- Profile Settings -->
    <string name="enter_name">Enter Profile Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="enter_feet">Feet</string>
    <string name="enter_inches">Inches</string>
    <string name="stats_info">This will help track your stats in the future</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_workout">ListWorkoutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
