<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.hangboard.activities.SettingsActivity">

        <TextView
            android:id="@+id/top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:text="@string/stats_info"
            />

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_below="@id/top_text"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

        <EditText
            android:id="@+id/profile_height_feet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_alignStart="@id/profile_name"
            android:layout_alignEnd="@id/profile_name"
            android:layout_below="@id/profile_name"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_feet"
            android:inputType="number" />

        <EditText
            android:id="@+id/height_inches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_alignEnd="@id/profile_name"
            android:layout_below="@id/profile_height_feet"
            android:layout_alignStart="@id/profile_name"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_inches"
            android:inputType="number" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_alignEnd="@id/profile_name"
            android:layout_alignStart="@id/profile_name"
            android:layout_below="@id/height_inches"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_weight"
            android:inputType="number" />

        <EditText
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_alignEnd="@id/profile_name"
            android:layout_below="@id/weight"
            android:layout_alignStart="@id/profile_name"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_age"
            android:inputType="number" />

    <fragment android:name="app.hangboard.navigation.NavigationFragment"
        android:id="@+id/navigation_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
