<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/exercise_seq"
        android:layout_width="54dp"
        android:layout_height="134dp"
        android:gravity="center"
        android:text="EX\n1"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:layout_marginLeft="0dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp" />


    <TextView
        android:id="@+id/duration_header"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/hang"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/exercise_seq"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="34dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text=":05"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/duration_header"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rest_header"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/rest"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/duration"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rest"
        android:layout_width="34dp"
        android:layout_height="22dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:text=":05"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/rest_header"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reps_header"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10.5dp"
        android:text="@string/reps"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/exercise_seq"
        app:layout_constraintTop_toBottomOf="@id/rest_header" />

    <TextView
        android:id="@+id/reps"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10.5dp"
        android:text="3"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/reps_header"
        app:layout_constraintTop_toBottomOf="@id/rest_header" />

    <TextView
        android:id="@+id/board_header"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/hangboard"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/exercise_seq"
        app:layout_constraintTop_toBottomOf="@id/reps_header" />

    <TextView
        android:id="@+id/board"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/no_hangboard"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/board_header"
        app:layout_constraintTop_toBottomOf="@id/reps_header" />


</android.support.constraint.ConstraintLayout>